--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -37,6 +37,8 @@ jobs:
     concurrency:
       group: release
       cancel-in-progress: true
+    permissions:
+      contents: write
     steps:
       - uses: actions/checkout@v3
 
