--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,16 +11,21 @@
     <uses-permission android:name="android.permission.UPDATE_PACKAGES_WITHOUT_USER_ACTION" />
 
     <application
+        android:name=".LunaApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:name=".LunaApplication"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Luna"
         tools:targetApi="31">
+        <activity
+            android:name=".InAppUpdateActivity"
+            android:exported="true"
+            android:label="@string/title_activity_in_app_update"
+            android:theme="@style/Theme.Luna.Dialog" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
