Add button to view log file

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,15 @@
             </intent-filter>
         </activity>
         <receiver android:name=".InstallReceiver" />
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="dev.hasali.luna.fileprovider"
+            android:grantUriPermissions="true"
+            android:exported="false">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/filepaths" />
+        </provider>
     </application>
 
 </manifest>
